# Robotics

./: CMakeLists.txt  LICENSE  README.md  here2.txt  out.txt  package.xml  pomoc.txt
include/: RosExampleClass.hpp  example.hpp  helper.hpp  shared_place.hpp
include/nodes/: camera_node.hpp  imu_node.hpp  io_node.hpp  led_publisher.hpp  lidar_node.hpp  line_node.hpp  motor_node.hpp
src/: example.cpp  main.cpp
src/nodes/: io_node.cpp
tests/: CMakeLists.txt  my_test.cpp  t_example.cpp  t_kinematics.cpp
