<?xml version="1.0"?>
<package format="3">
    <name>prp_project</name>
    <version>0.0.0</version>
    <description>Solution of PRP project</description>
    <maintainer email="adam.ligocki@vut.cz">Adam Ligocki</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>


    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
